kde4libs (4:4.8.5-1) UNRELEASED; urgency=low

  * New upstream release.

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Remove:
    - 01_upstream_nepomuk_fix_76e0376d7582cfe5b898c56bf3779ca2279dace8.diff
    - 02_upstream_nepomuk_fix_bde5aad1e9f7bfb6f8d5c60197797de4a315158d.diff
    - 03_upstream_powermanager_fix_05f1a19291af5c16745b76c3e0944c5b80ef5870.diff
    which were taken from upstream.
  * Refresh patch make_libkdeinit4_private.diff.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 21 Sep 2012 14:02:51 -0300

kde4libs (4:4.8.4-3) unstable; urgency=low

  * Team upload.

  [ Matthias Klumpp ]
  * Backport upstream commit 05f1a19291af5c16745b76c3e0944c5b80ef5870
    to fix power management. (Make sure powermanager values are valid)

 -- Modestas Vainius <modax@debian.org>  Wed, 27 Jun 2012 22:41:42 +0300

kde4libs (4:4.8.4-2) unstable; urgency=low

  * Team upload.

  [ Modestas Vainius ]
  * Confirm symbol files on more Debian arches.

 -- Sune Vuorela <sune@debian.org>  Sun, 24 Jun 2012 18:23:08 +0200

kde4libs (4:4.8.4-1) experimental; urgency=low

  * New upstream release.

  [ Modestas Vainius ]
  * Update symbol files.

  [ José Manuel Santamaría Lema ]
  * Add watch file.
  * Update patches:
    - refresh python3-support-bytecode.patch
    - refresh various patches to make them apply without any offset.
  * Update symbols files.
  * Drop unused lintian override "dbg-package-missing-depends kdelibs5-dbg".

  [ Sune Vuorela ]
  * Pull patches from upstream to fix the nepomuk related crashes

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 27 May 2012 12:10:37 +0200

kde4libs (4:4.8.3-2) unstable; urgency=low

  * Team upload.
  * Update symbol files.

 -- Modestas Vainius <modax@debian.org>  Sat, 09 Jun 2012 15:38:38 +0300

kde4libs (4:4.8.3-1) experimental; urgency=low

  * New upstream release.
    - FindXine.cmake doesn't call xine-config anymore (Closes: #656914)
  * Team upload.

  [ Eshat Cakar ]